Empty Todos Bug fixed and X overflow hidden

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     display: flex;
     justify-content: center;
     background-color: hsl(235, 21%, 11%);
+    overflow-x: hidden;
 }
 
 body.light-theme {
